chore: add new keywords

--- a/src/core/localization/en.json
+++ b/src/core/localization/en.json
@@ -4,7 +4,8 @@
     "or": "or ",
     "get-paid": "get paid",
     "save": "Save",
-    "update": "Update"
+    "update": "Update",
+    "done": "Done"
   },
   "Addresses": {
     "saved-addresses": "Saved Addresses",
