--- a/src/core/localization/tr.json
+++ b/src/core/localization/tr.json
@@ -4,7 +4,8 @@
     "or": "veya ",
     "get-paid": "ödeme al",
     "save": "Kaydet",
-    "update": "Güncelle"
+    "update": "Güncelle",
+    "done": "Bitti"
   },
   "Addresses": {
     "saved-addresses": "Kayıtlı Adresler",
