--- a/src/core/localization/tr.json
+++ b/src/core/localization/tr.json
@@ -5,20 +5,22 @@
     "get-paid": "ödeme al",
     "save": "Kaydet",
     "update": "Güncelle",
-    "done": "Bitti"
+    "done": "Bitti",
+    "delete": "Sil"
   },
   "Addresses": {
     "saved-addresses": "Kayıtlı Adresler",
     "add-new-address": "Yeni Adres Ekle"
   },
-
   "Add-Address": {
     "address-title": "Adres başlığı (Ev, işyeri, vs.)",
     "city" : "İl",
     "district": "İlçe",
-    "address-details": "Adres detayı"
+    "address-details": "Adres detayı",
+    "add-success": "Adresin başarıyla kaydedildi!",
+    "update-success": "Adresin başarıyla güncellendi!",
+    "delete-success": "Adresin başarıyla silindi!"
   },
-
   "Navigation": {
     "my-addresses": "Adreslerim",
     "your-address-info": "Adres Bilgilerin"
